--- a/Morphological_Analysis.ipynb
+++ b/Morphological_Analysis.ipynb
@@ -162,7 +162,7 @@
         "!apt-get -q -y install sudo file mecab libmecab-dev mecab-ipadic-utf8 git curl python-mecab > /dev/null\n",
         "!git clone --depth 1 https://github.com/neologd/mecab-ipadic-neologd.git > /dev/null \n",
         "!echo yes | mecab-ipadic-neologd/bin/install-mecab-ipadic-neologd -n > /dev/null 2>&1\n",
-        "!pip install mecab-python3 > /dev/null\n",
+        "!pip install mecab-python3==0.996.5 > /dev/null\n",
         "!echo mecab-config --dicdir\"/mecab-ipadic-neologd\""
       ],
       "execution_count": 0,
